chore(inventory): add devices discovered via OPNsense ARP

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,2 +1,17 @@
 [ntop_discovered]
 [opnsense_discovered]
+host_66_41_200_1 ansible_host=66.41.200.1 ansible_user=ansible
+host_66_41_201_57 ansible_host=66.41.201.57 ansible_user=ansible
+Nest-Cam ansible_host=192.168.1.104 ansible_user=ansible
+Pixel-8a ansible_host=192.168.1.106 ansible_user=ansible
+docker ansible_host=192.168.1.173 ansible_user=ansible
+n8n ansible_host=192.168.1.204 ansible_user=ansible
+host_192_168_1_111 ansible_host=192.168.1.111 ansible_user=ansible
+KP303 ansible_host=192.168.1.110 ansible_user=ansible
+host_192_168_1_161 ansible_host=192.168.1.161 ansible_user=ansible
+host_192_168_1_1 ansible_host=192.168.1.1 ansible_user=ansible
+host_192_168_1_163 ansible_host=192.168.1.163 ansible_user=ansible
+host_192_168_1_2 ansible_host=192.168.1.2 ansible_user=ansible
+Nest-Cam ansible_host=192.168.1.164 ansible_user=ansible
+traefik ansible_host=192.168.1.199 ansible_user=ansible
+host_192_168_1_221 ansible_host=192.168.1.221 ansible_user=ansible
