--- a/inventory/hosts.yaml
+++ b/inventory/hosts.yaml
@@ -1,1 +1,18 @@
-
+all:
+  children:
+    k3s:
+      hosts:
+        westeros:
+          ansible_host: 192.168.1.200
+          ansible_user: feoner
+        gondor:
+          ansible_host: 192.168.1.201
+          ansible_user: feoner
+    proxmox:
+      hosts:
+        pve1:
+          ansible_host: 192.168.1.2
+          ansible_user: root
+        pve2:
+          anisble_host: 192.168.1.3
+          anisble_user: root
