--- a/inventory/all_homelab.yaml
+++ b/inventory/all_homelab.yaml
@@ -32,7 +32,7 @@ all:
       hosts:
         opnsense:
           ansible_host: 192.168.1.1
-          ansible_user: root
+          ansible_user: ansible
 
     k3s:
       hosts:
